@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/sysstat-11.0.2.ebuild,v 1.9 2014/12/05 10:14:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/sysstat-11.0.2.ebuild,v 1.10 2015/08/07 13:00:22 jlec Exp $
 
 EAPI=5
 inherit eutils multilib systemd toolchain-funcs
@@ -17,7 +17,7 @@ IUSE="cron debug +doc isag nls lm_sensors selinux"
 CDEPEND="
 	cron? ( sys-process/cronbase )
 	isag? (
-		dev-lang/tk
+		dev-lang/tk:0
 		dev-vcs/rcs
 		sci-visualization/gnuplot
 	)
