@@ -1,10 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/meshlab-1.3.3.ebuild,v 1.1 2015/07/25 19:30:40 amynka Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/meshlab-1.3.3.ebuild,v 1.2 2015/08/07 12:42:07 amynka Exp $
 
 EAPI=5
 
-inherit eutils versionator multilib qt4-r2
+inherit eutils versionator multilib
 
 DESCRIPTION="A mesh processing system"
 HOMEPAGE="http://meshlab.sourceforge.net/"
@@ -40,8 +40,8 @@ src_prepare() {
 }
 
 src_configure() {
-	eqmake4 external/external.pro
-	eqmake4 meshlab_full.pro
+	qmake -recursive external/external.pro
+	qmake -recursive meshlab_full.pro
 }
 
 src_compile() {
